Refactor (mostly C-like code changed to more Java)